--- a/.github/workflows/test-cta.yml
+++ b/.github/workflows/test-cta.yml
@@ -47,7 +47,7 @@ jobs:
       - name: install webkit2gtk
         run: |
           sudo apt-get update
-          sudo apt-get install -y webkit2gtk-4.0
+          sudo apt-get install -y libgtk-3-dev libgtksourceview-3.0-dev webkit2gtk-4.0
       - run: yarn
         working-directory: tooling/create-tauri-app
       - run: yarn build
@@ -83,7 +83,7 @@ jobs:
       - name: install webkit2gtk
         run: |
           sudo apt-get update
-          sudo apt-get install -y webkit2gtk-4.0
+          sudo apt-get install -y libgtk-3-dev libgtksourceview-3.0-dev webkit2gtk-4.0
       - run: yarn
         working-directory: tooling/create-tauri-app
       - run: yarn build
