--- a/.github/workflows/udeps.yml
+++ b/.github/workflows/udeps.yml
@@ -90,7 +90,7 @@ jobs:
     - name: Install required packages
       run: |
         sudo apt-get update
-        sudo apt-get install -y webkit2gtk-4.0
+        sudo apt-get install -y libgtk-3-dev libgtksourceview-3.0-dev webkit2gtk-4.0
 
     - uses: actions-rs/cargo@v1
       with:
