--- a/.github/workflows/update-docs.yml
+++ b/.github/workflows/update-docs.yml
@@ -32,7 +32,7 @@ jobs:
       - name: install webkit2gtk
         run: |
           sudo apt-get update
-          sudo apt-get install -y webkit2gtk-4.0
+          sudo apt-get install -y libgtk-3-dev libgtksourceview-3.0-dev webkit2gtk-4.0
       - name: generate rust docs
         working-directory: ./tauri/core/tauri
         run: cargo doc --no-deps
