--- a/.github/workflows/smoke-test-prod.yml
+++ b/.github/workflows/smoke-test-prod.yml
@@ -37,7 +37,7 @@ jobs:
         if: matrix.platform == 'ubuntu-latest'
         run: |
           sudo apt-get update
-          sudo apt-get install -y libgtk-3-dev libgtksourceview-3.0-dev webkit2gtk-4.0
+          sudo apt-get install -y libgtk-3-dev libgtksourceview-3.0-dev webkit2gtk-4.0 libappindicator3-dev
       - name: cache rust bin
         id: cache_rust_bin
         uses: actions/cache@v1
