--- a/tooling/cli.js/package.json
+++ b/tooling/cli.js/package.json
@@ -104,10 +104,11 @@
     "ts-loader": "9.1.2",
     "typescript": "4.2.4",
     "webpack": "5.36.2",
-    "webpack-cli": "4.6.0",
+    "webpack-cli": "4.7.0",
     "webpack-node-externals": "3.0.0"
   },
   "resolutions": {
-    "**/lodash": "4.17.21"
+    "**/lodash": "4.17.21",
+    "**/hosted-git-info": "2.8.9"
   }
 }
