--- a/core/tauri-runtime-wry/Cargo.toml
+++ b/core/tauri-runtime-wry/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "tauri-wry"
+name = "tauri-runtime-wry"
 version = "0.0.0"
 authors = [ "Tauri Programme within The Commons Conservancy" ]
 categories = [ "gui", "web-programming" ]
