--- a/core/tauri-utils/Cargo.toml
+++ b/core/tauri-utils/Cargo.toml
@@ -20,5 +20,8 @@ html5ever = "0.25"
 proc-macro2 = { version = "1.0", optional = true }
 quote = { version = "1.0", optional = true }
 
+[target."cfg(target_os = \"linux\")".dependencies]
+heck = "0.3"
+
 [features]
 build = [ "proc-macro2", "quote" ]
