fix: prune packages, add license files, closes #1507

--- a/tooling/cli.js/package.json
+++ b/tooling/cli.js/package.json
@@ -6,9 +6,9 @@
     "tauri": "./bin/tauri.js"
   },
   "files": [
-    "bin/**",
-    "dist/**",
-    "scripts/**"
+    "bin",
+    "dist",
+    "scripts"
   ],
   "funding": {
     "type": "opencollective",
