--- a/core/tauri-build/Cargo.toml
+++ b/core/tauri-build/Cargo.toml
@@ -8,6 +8,7 @@ homepage = "https://tauri.studio"
 repository = "https://github.com/tauri-apps/tauri/tree/dev/core/tauri-build"
 description = "build time code to pair with https://crates.io/crates/tauri"
 edition = "2018"
+exclude = [ ".license_template", "CHANGELOG.md", "/target" ]
 
 [package.metadata.docs.rs]
 all-features = true
