--- a/core/tauri-codegen/Cargo.toml
+++ b/core/tauri-codegen/Cargo.toml
@@ -8,6 +8,7 @@ homepage = "https://tauri.studio"
 repository = "https://github.com/tauri-apps/tauri/tree/dev/core/tauri-codegen"
 description = "code generation meant to be consumed inside of `tauri` through `tauri-build` or `tauri-macros`"
 edition = "2018"
+exclude = [ ".license_template", "CHANGELOG.md", "/target" ]
 
 [dependencies]
 blake3 = { version = "0.3", features = [ "rayon" ] }
