--- a/core/tauri-macros/Cargo.toml
+++ b/core/tauri-macros/Cargo.toml
@@ -8,6 +8,7 @@ homepage = "https://tauri.studio"
 repository = "https://github.com/tauri-apps/tauri"
 description = "Macros for the tauri crate."
 edition = "2018"
+exclude = [ ".license_template", "CHANGELOG.md", "/target" ]
 
 [lib]
 proc-macro = true
