--- a/core/tauri-runtime-wry/Cargo.toml
+++ b/core/tauri-runtime-wry/Cargo.toml
@@ -8,6 +8,7 @@ homepage = "https://tauri.studio"
 repository = "https://github.com/tauri-apps/tauri"
 description = "Wry bindings to the Tauri runtime"
 edition = "2018"
+exclude = [ ".license_template", "CHANGELOG.md", "/target" ]
 
 [dependencies]
 wry = { version = "0.9.2", default-features = false, features = ["file-drop", "protocol", "win32"] }
