--- a/core/tauri-utils/Cargo.toml
+++ b/core/tauri-utils/Cargo.toml
@@ -7,6 +7,7 @@ homepage = "https://tauri.studio"
 repository = "https://github.com/tauri-apps/tauri"
 description = "Utilities for Tauri"
 edition = "2018"
+exclude = [ ".license_template", "CHANGELOG.md", "/target" ]
 
 [dependencies]
 serde = { version = "1.0", features = [ "derive" ] }
