--- a/core/tauri/Cargo.toml
+++ b/core/tauri/Cargo.toml
@@ -8,7 +8,7 @@ homepage = "https://tauri.studio"
 repository = "https://github.com/tauri-apps/tauri"
 description = "Make tiny, secure apps for all desktop platforms with Tauri"
 edition = "2018"
-exclude = [ "/test" ]
+exclude = [ "/test", "/.scripts", ".license_template", "CHANGELOG.md", "/target" ]
 
 [package.metadata.docs.rs]
 all-features = true
