--- a/tooling/bundler/Cargo.toml
+++ b/tooling/bundler/Cargo.toml
@@ -13,6 +13,7 @@ keywords = [ "bundle", "cargo", "tauri" ]
 repository = "https://github.com/tauri-apps/tauri"
 description = "Wrap rust executables in OS-specific app bundles for Tauri"
 edition = "2018"
+exclude = [ ".license_template", "CHANGELOG.md", "/target", "rustfmt.toml" ]
 
 [dependencies]
 ar = "0.8.0"
