--- a/core/tauri-utils/Cargo.toml
+++ b/core/tauri-utils/Cargo.toml
@@ -8,6 +8,7 @@ repository = "https://github.com/tauri-apps/tauri"
 description = "Utilities for Tauri"
 edition = "2018"
 exclude = [ ".license_template", "CHANGELOG.md", "/target" ]
+readme = "README.md"
 
 [dependencies]
 serde = { version = "1.0", features = [ "derive" ] }
