--- a/core/tauri-runtime/Cargo.toml
+++ b/core/tauri-runtime/Cargo.toml
@@ -8,6 +8,8 @@ homepage = "https://tauri.studio"
 repository = "https://github.com/tauri-apps/tauri"
 description = "Runtime for Tauri applications"
 edition = "2018"
+exclude = [ ".license_template", "CHANGELOG.md", "/target" ]
+readme = "README.md"
 
 [package.metadata.docs.rs]
 all-features = true
