--- a/core/tauri/Cargo.toml
+++ b/core/tauri/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "tauri"
-version = "1.0.0-beta-rc.4"
+version = "0.99.0"
 authors = [ "Tauri Programme within The Commons Conservancy" ]
 categories = [ "gui", "web-programming" ]
 license = "Apache-2.0 OR MIT"
@@ -30,8 +30,8 @@ uuid = { version = "0.8.2", features = [ "v4" ] }
 thiserror = "1.0.24"
 once_cell = "1.7.2"
 tauri-runtime = { version = "0.0.0", path = "../tauri-runtime" }
-tauri-macros = { version = "1.0.0-beta-rc.1", path = "../tauri-macros" }
-tauri-utils = { version = "1.0.0-beta-rc.1", path = "../tauri-utils" }
+tauri-macros = { version = "0.99.0", path = "../tauri-macros" }
+tauri-utils = { version = "0.99.0", path = "../tauri-utils" }
 tauri-runtime-wry = { version = "0.0.0", path = "../tauri-runtime-wry", optional = true }
 rand = "0.8"
 reqwest = { version = "0.11", features = [ "json", "multipart" ] }
