--- a/core/tauri-runtime-wry/Cargo.toml
+++ b/core/tauri-runtime-wry/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "tauri-runtime-wry"
-version = "0.0.0"
+version = "0.1.0"
 authors = [ "Tauri Programme within The Commons Conservancy" ]
 categories = [ "gui", "web-programming" ]
 license = "Apache-2.0 OR MIT"
@@ -12,9 +12,9 @@ exclude = [ ".license_template", "CHANGELOG.md", "/target" ]
 readme = "README.md"
 
 [dependencies]
-wry = { version = "0.9.2", default-features = false, features = ["file-drop", "protocol", "win32"] }
-tauri-runtime = { version = "0.0.0", path = "../tauri-runtime" }
-tauri-utils = { version = "1.0.0-beta-rc.1", path = "../tauri-utils" }
+wry = { version = "0.9.2", default-features = false, features = [ "file-drop", "protocol", "win32" ] }
+tauri-runtime = { version = "0.1.0", path = "../tauri-runtime" }
+tauri-utils = { version = "1.0.0-beta.0", path = "../tauri-utils" }
 image = "0.23"
 uuid = { version = "0.8.2", features = [ "v4" ] }
 
