--- a/core/tauri-runtime/Cargo.toml
+++ b/core/tauri-runtime/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "tauri-runtime"
-version = "0.0.0"
+version = "0.1.0"
 authors = [ "Tauri Programme within The Commons Conservancy" ]
 categories = [ "gui", "web-programming" ]
 license = "Apache-2.0 OR MIT"
@@ -25,9 +25,9 @@ targets = [
 serde = { version = "1.0", features = [ "derive" ] }
 serde_json = "1.0"
 thiserror = "1.0"
-tauri-utils = { version = "1.0.0-beta-rc.1", path = "../tauri-utils" }
+tauri-utils = { version = "1.0.0-beta.0", path = "../tauri-utils" }
 uuid = { version = "0.8.2", features = [ "v4" ] }
 
 [features]
-menu = []
-system-tray = []
+menu = [ ]
+system-tray = [ ]
