--- a/core/tauri/Cargo.toml
+++ b/core/tauri/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "tauri"
-version = "1.0.0-beta-rc.4"
+version = "1.0.0-beta.0"
 authors = [ "Tauri Programme within The Commons Conservancy" ]
 categories = [ "gui", "web-programming" ]
 license = "Apache-2.0 OR MIT"
@@ -8,8 +8,15 @@ homepage = "https://tauri.studio"
 repository = "https://github.com/tauri-apps/tauri"
 description = "Make tiny, secure apps for all desktop platforms with Tauri"
 edition = "2018"
-exclude = [ "/test", "/.scripts", ".license_template", "CHANGELOG.md", "/target" ]
+exclude = [
+  "/test",
+  "/.scripts",
+  ".license_template",
+  "CHANGELOG.md",
+  "/target"
+]
 readme = "README.md"
+
 [package.metadata.docs.rs]
 all-features = true
 rustdoc-args = [ "--cfg", "doc_cfg" ]
@@ -29,10 +36,10 @@ futures = "0.3"
 uuid = { version = "0.8.2", features = [ "v4" ] }
 thiserror = "1.0.24"
 once_cell = "1.7.2"
-tauri-runtime = { version = "0.0.0", path = "../tauri-runtime" }
-tauri-macros = { version = "1.0.0-beta-rc.1", path = "../tauri-macros" }
-tauri-utils = { version = "1.0.0-beta-rc.1", path = "../tauri-utils" }
-tauri-runtime-wry = { version = "0.0.0", path = "../tauri-runtime-wry", optional = true }
+tauri-runtime = { version = "0.1.0", path = "../tauri-runtime" }
+tauri-macros = { version = "1.0.0-beta.0", path = "../tauri-macros" }
+tauri-utils = { version = "1.0.0-beta.0", path = "../tauri-utils" }
+tauri-runtime-wry = { version = "0.1.0", path = "../tauri-runtime-wry", optional = true }
 rand = "0.8"
 reqwest = { version = "0.11", features = [ "json", "multipart" ] }
 tempfile = "3"
@@ -82,7 +89,6 @@ api-all = [ "notification-all", "global-shortcut-all", "updater" ]
 updater = [ "reqwest/default-tls" ]
 menu = [ "tauri-runtime/menu", "tauri-runtime-wry/menu" ]
 system-tray = [ "tauri-runtime/system-tray", "tauri-runtime-wry/system-tray" ]
-# allowlist
 fs-all = [ ]
 fs-read-text-file = [ ]
 fs-read-binary-file = [ ]
