--- a/tooling/bundler/Cargo.toml
+++ b/tooling/bundler/Cargo.toml
@@ -2,7 +2,7 @@ workspace = { }
 
 [package]
 name = "tauri-bundler"
-version = "1.0.0-beta-rc.1"
+version = "1.0.0-beta.0"
 authors = [
   "George Burton <burtonageo@gmail.com>",
   "Tauri Programme within The Commons Conservancy"
@@ -13,7 +13,12 @@ keywords = [ "bundle", "cargo", "tauri" ]
 repository = "https://github.com/tauri-apps/tauri"
 description = "Wrap rust executables in OS-specific app bundles for Tauri"
 edition = "2018"
-exclude = [ ".license_template", "CHANGELOG.md", "/target", "rustfmt.toml" ]
+exclude = [
+  ".license_template",
+  "CHANGELOG.md",
+  "/target",
+  "rustfmt.toml"
+]
 
 [dependencies]
 ar = "0.8.0"
