--- a/core/tauri-codegen/Cargo.toml
+++ b/core/tauri-codegen/Cargo.toml
@@ -17,7 +17,7 @@ proc-macro2 = "1"
 quote = "1"
 serde = { version = "1", features = [ "derive" ] }
 serde_json = "1"
-tauri-utils = { version = "1.0.0-beta.0", path = "../tauri-utils", features = [ "build" ] }
+tauri-utils = { version = "=1.0.0-beta.0", path = "../tauri-utils", features = [ "build" ] }
 thiserror = "1"
 walkdir = "2"
 zstd = "0.8"
