--- a/core/tauri-macros/Cargo.toml
+++ b/core/tauri-macros/Cargo.toml
@@ -18,7 +18,7 @@ proc-macro = true
 proc-macro2 = "1"
 quote = "1"
 syn = { version = "1", features = [ "full" ] }
-tauri-codegen = { version = "1.0.0-beta.0", path = "../tauri-codegen" }
+tauri-codegen = { version = "=1.0.0-beta.0", path = "../tauri-codegen" }
 
 [features]
 custom-protocol = [ ]
