--- a/core/tauri-runtime-wry/Cargo.toml
+++ b/core/tauri-runtime-wry/Cargo.toml
@@ -14,7 +14,7 @@ readme = "README.md"
 [dependencies]
 wry = { version = "0.9.2", default-features = false, features = [ "file-drop", "protocol", "win32" ] }
 tauri-runtime = { version = "0.1.0", path = "../tauri-runtime" }
-tauri-utils = { version = "1.0.0-beta.0", path = "../tauri-utils" }
+tauri-utils = { version = "=1.0.0-beta.0", path = "../tauri-utils" }
 image = "0.23"
 uuid = { version = "0.8.2", features = [ "v4" ] }
 
