--- a/core/tauri/Cargo.toml
+++ b/core/tauri/Cargo.toml
@@ -37,8 +37,8 @@ uuid = { version = "0.8.2", features = [ "v4" ] }
 thiserror = "1.0.24"
 once_cell = "1.7.2"
 tauri-runtime = { version = "0.1.0", path = "../tauri-runtime" }
-tauri-macros = { version = "1.0.0-beta.0", path = "../tauri-macros" }
-tauri-utils = { version = "1.0.0-beta.0", path = "../tauri-utils" }
+tauri-macros = { version = "=1.0.0-beta.0", path = "../tauri-macros" }
+tauri-utils = { version = "=1.0.0-beta.0", path = "../tauri-utils" }
 tauri-runtime-wry = { version = "0.1.0", path = "../tauri-runtime-wry", optional = true }
 rand = "0.8"
 reqwest = { version = "0.11", features = [ "json", "multipart" ] }
