--- a/tooling/cli.rs/Cargo.toml
+++ b/tooling/cli.rs/Cargo.toml
@@ -19,7 +19,7 @@ path = "src/main.rs"
 [dependencies]
 clap = { version = "3.0.0-beta.2", features = [ "yaml" ] }
 anyhow = "1.0"
-tauri-bundler = { version = "1.0.0-beta.0", path = "../bundler" }
+tauri-bundler = { version = "=1.0.0-beta.0", path = "../bundler" }
 colored = "2.0"
 once_cell = "1.7"
 serde = { version = "1.0", features = [ "derive" ] }
