--- a/.github/workflows/test-cta.yml
+++ b/.github/workflows/test-cta.yml
@@ -49,6 +49,14 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y libgtk-3-dev libgtksourceview-3.0-dev webkit2gtk-4.0 libappindicator3-dev
       - run: yarn
+        working-directory: tooling/cli.js
+      - run: yarn build
+        working-directory: tooling/cli.js
+      - run: yarn
+        working-directory: tooling/api
+      - run: yarn build
+        working-directory: tooling/api
+      - run: yarn
         working-directory: tooling/create-tauri-app
       - run: yarn build
         working-directory: tooling/create-tauri-app
