--- a/tooling/api/package.json
+++ b/tooling/api/package.json
@@ -7,6 +7,9 @@
     "type": "opencollective",
     "url": "https://opencollective.com/tauri"
   },
+  "exports": {
+    "./package.json": "./package.json"
+  },
   "scripts": {
     "build": "rimraf ./dist && rollup -c --silent && node ./scripts/after-build.cjs",
     "npm-pack": "yarn build && cd ./dist && npm pack",
