--- a/.github/workflows/test-cta.yml
+++ b/.github/workflows/test-cta.yml
@@ -9,6 +9,8 @@ on:
     inputs:
       branch:
         default: "dev"
+      platform:
+        default: "ubuntu"
   pull_request:
     paths:
       - "tooling/create-tauri-app/**"
@@ -19,7 +21,7 @@ env:
 jobs:
   create-recipe-with-npm:
     name: "node@${{ matrix.node }} + npm@${{ matrix.manager }}: ${{ matrix.recipe }}"
-    runs-on: ubuntu-latest
+    runs-on: ${{ github.event.inputs.branch || 'ubuntu' }}-latest
 
     strategy:
       fail-fast: false
@@ -45,9 +47,18 @@ jobs:
           npm-version: ${{ matrix.manager }}
           yarn-version: 1.22.5
       - name: install webkit2gtk
+        if: (github.event.inputs.branch || 'ubuntu') == 'ubuntu'
         run: |
           sudo apt-get update
           sudo apt-get install -y libgtk-3-dev libgtksourceview-3.0-dev webkit2gtk-4.0 libappindicator3-dev
+      - run: yarn
+        working-directory: tooling/cli.js
+      - run: yarn build
+        working-directory: tooling/cli.js
+      - run: yarn
+        working-directory: tooling/api
+      - run: yarn build
+        working-directory: tooling/api
       - run: yarn
         working-directory: tooling/create-tauri-app
       - run: yarn build
@@ -60,7 +71,7 @@ jobs:
 
   create-recipe-with-yarn:
     name: "node@${{ matrix.node }} + yarn@1: ${{ matrix.recipe }}"
-    runs-on: ubuntu-latest
+    runs-on: ${{ github.event.inputs.branch || 'ubuntu' }}-latest
 
     strategy:
       fail-fast: false
@@ -81,6 +92,7 @@ jobs:
           node-version: ${{ matrix.node }}
           yarn-version: 1.22.5
       - name: install webkit2gtk
+        if: (github.event.inputs.branch || 'ubuntu') == 'ubuntu'
         run: |
           sudo apt-get update
           sudo apt-get install -y libgtk-3-dev libgtksourceview-3.0-dev webkit2gtk-4.0 libappindicator3-dev
