act as intermediary server completely

--- a/tooling/webdriver/Cargo.toml
+++ b/tooling/webdriver/Cargo.toml
@@ -18,6 +18,7 @@ anyhow = "1"
 hyper = { version = "0.14", features = [ "client", "http1", "runtime", "server", "stream", "tcp" ] }
 futures = "0.3"
 pico-args = "0.4"
+serde = { version = "1", features = [ "derive" ] }
+serde_json = "1"
 tokio = { version = "1", features = [ "macros" ] } # other required features enabled by hyper
 which = "4"
-
