--- a/core/tauri-runtime-wry/Cargo.toml
+++ b/core/tauri-runtime-wry/Cargo.toml
@@ -16,6 +16,8 @@ wry = { version = "0.9.2", default-features = false, features = [ "file-drop", "
 tauri-runtime = { version = "0.1.1", path = "../tauri-runtime" }
 tauri-utils = { version = "1.0.0-beta.0", path = "../tauri-utils" }
 uuid = { version = "0.8.2", features = [ "v4" ] }
+infer = "0.4"
+ico = "0.1"
 
 [features]
 dox = [ "wry/dox" ]
