--- a/core/tauri-runtime-wry/Cargo.toml
+++ b/core/tauri-runtime-wry/Cargo.toml
@@ -15,8 +15,11 @@ readme = "README.md"
 wry = { version = "0.9.2", default-features = false, features = [ "file-drop", "protocol", "win32" ] }
 tauri-runtime = { version = "0.1.1", path = "../tauri-runtime" }
 tauri-utils = { version = "1.0.0-beta.0", path = "../tauri-utils" }
-image = "0.23"
 uuid = { version = "0.8.2", features = [ "v4" ] }
+infer = "0.4"
+
+[target."cfg(windows)".dependencies]
+ico = "0.1"
 
 [features]
 dox = [ "wry/dox" ]
