--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ members = [
   "core/tauri-codegen",
   # bench
   "core/tauri/bench/tests/helloworld/src-tauri",
+  "core/tauri/bench/tests/cpu_intensive/src-tauri",
   "core/tauri/bench/tools",
 
   # examples
