--- a/.github/workflows/bench.yml
+++ b/.github/workflows/bench.yml
@@ -1,6 +1,10 @@
 name: benches
 
-on: [push, pull_request, workflow_dispatch]
+on:
+  push:
+    branches:
+      - dev
+  workflow_dispatch:
 
 jobs:
   bench:
@@ -21,37 +25,30 @@ jobs:
           toolchain: stable
           target: ${{ matrix.platform.target }}
 
-      - name: install webkit2gtk (ubuntu only)
-        if: matrix.platform.os == 'ubuntu-latest'
+      - name: install depedencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y webkit2gtk-4.0 libgtksourceview-3.0-dev libappindicator3-dev
-
-      - name: install xvfb and hyperfine
-        run: |
-          sudo apt-get install -y xvfb
+          sudo apt-get install -y webkit2gtk-4.0 libgtksourceview-3.0-dev libappindicator3-dev xvfb
           wget https://github.com/sharkdp/hyperfine/releases/download/v1.11.0/hyperfine_1.11.0_amd64.deb
           sudo dpkg -i hyperfine_1.11.0_amd64.deb
 
-      - name: build benchmarks
+      - name: run benchmarks
         run: |
           cargo build --release --bin "bench_*"
           xvfb-run --auto-servernum cargo bench --bench tauri_bench
 
-      - name: clone current benchmarks
-        uses: actions/checkout@v2
+      - name: clone benchmarks_results
         if: |
-          github.repository == 'tauri-apps/tauri' &&
-          (github.ref == 'refs/heads/dev' || github.ref == 'refs/heads/feat/benches')
+          github.repository == 'tauri-apps/tauri' && github.ref == 'refs/heads/dev'
+        uses: actions/checkout@v2
         with:
           token: ${{ secrets.BENCH_PAT }}
           path: gh-pages
           repository: tauri-apps/benchmark_results
 
-      - name: post benchmarks
+      - name: push new benchmarks
         if: |
-          github.repository == 'tauri-apps/tauri' &&
-          (github.ref == 'refs/heads/dev' || github.ref == 'refs/heads/feat/benches')
+          github.repository == 'tauri-apps/tauri' && github.ref == 'refs/heads/dev'
         run: |
           cargo run --bin build_benchmark_jsons
           cd gh-pages
