--- a/tooling/bench/tests/files_transfer/src-tauri/Cargo.toml
+++ b/tooling/bench/tests/files_transfer/src-tauri/Cargo.toml
@@ -1,16 +1,16 @@
 [package]
-name = "bench_cpu_intensive"
+name = "bench_files_transfer"
 version = "0.1.0"
 description = "A very simple Tauri Appplication"
 edition = "2018"
 
 [build-dependencies]
-tauri-build = { path = "../../../../../tauri-build", features = [ "codegen" ] }
+tauri-build = { path = "../../../../../core/tauri-build", features = [ "codegen" ] }
 
 [dependencies]
 serde_json = "1.0"
 serde = { version = "1.0", features = [ "derive" ] }
-tauri = { path = "../../../../", features = [] }
+tauri = { path = "../../../../../core/tauri", features = [] }
 
 [features]
 default = [ "custom-protocol" ]
