allow bench upload for few round

--- a/.github/workflows/bench.yml
+++ b/.github/workflows/bench.yml
@@ -99,7 +99,7 @@ jobs:
           xvfb-run --auto-servernum cargo run --manifest-path tooling/bench/Cargo.toml --bin run_benchmark
 
       - name: clone benchmarks_results
-        if:  github.repository == 'tauri-apps/tauri' && github.ref == 'refs/heads/dev'
+        # if:  github.repository == 'tauri-apps/tauri' && github.ref == 'refs/heads/dev'
         uses: actions/checkout@v2
         with:
           token: ${{ secrets.BENCH_PAT }}
@@ -107,7 +107,7 @@ jobs:
           repository: tauri-apps/benchmark_results
 
       - name: push new benchmarks
-        if:  github.repository == 'tauri-apps/tauri' && github.ref == 'refs/heads/dev'
+        # if:  github.repository == 'tauri-apps/tauri' && github.ref == 'refs/heads/dev'
         run: |
           cargo run --manifest-path tooling/bench/Cargo.toml --bin build_benchmark_jsons
           cd gh-pages
