fix(core): set parent window handle on dialogs, closes #1876 (#1889)

--- a/core/tauri/Cargo.toml
+++ b/core/tauri/Cargo.toml
@@ -80,6 +80,7 @@ os_pipe = { version = "0.9", optional = true }
 
 # Dialogs
 rfd = "0.4"
+raw-window-handle = { version="0.3.3", optional = true }
 
 # Updater
 minisign-verify = { version = "0.1", optional = true }
@@ -126,8 +127,8 @@ shell-all = [ "shell-open", "shell-execute" ]
 shell-execute = [ "shared_child", "os_pipe" ]
 shell-open = [ "open" ]
 dialog-all = [ "dialog-open", "dialog-save" ]
-dialog-open = [ ]
-dialog-save = [ ]
+dialog-open = [ "raw-window-handle" ]
+dialog-save = [ "raw-window-handle" ]
 http-all = [ ]
 http-request = [ ]
 notification-all = [ "notify-rust" ]
